# lecture2

./: README.md  lecture2.cabal  stack.yaml
src/: Conditionals.hs  Expressions.hs  Functions.hs
